fix compiler issues

--- a/css/scss/styles.scss
+++ b/css/scss/styles.scss
@@ -1,3 +1,3 @@
-@import "../../3d-party/bootstrap/scss/function";
-@import "../../3d-party/bootstrap/scss/variables";
-@import "../../3d-party/bootstrap/scss/maps";
+@import "../../3d-party/src/bootstrap-5.2.3/scss/functions";
+@import "../../3d-party/src/bootstrap-5.2.3/scss/variables";
+@import "../../3d-party/src/bootstrap-5.2.3/scss/maps";
